--- a/quiz.html
+++ b/quiz.html
@@ -228,13 +228,13 @@
     // Helper to map class to level for getQuizForSubject
     function classToLevel(className) {
         switch(className) {
-            case 'class6': return 'beginner';
-            case 'class7': return 'elementary';
-            case 'class8': return 'intermediate';
-            case 'class9': return 'highschool';
-            case 'class10': return 'highschool';
-            case 'class11': return 'seniorhigh';
-            case 'class12': return 'seniorhigh';
+            case 'class6': return 'class6';
+            case 'class7': return 'class7';
+            case 'class8': return 'class8';
+            case 'class9': return 'class9';
+            case 'class10': return 'class10';
+            case 'class11': return 'class11';
+            case 'class12': return 'class12';
             default: return 'beginner';
         }
     }
